# Terminal-based-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculator  makefile
AppImage/: calculator.desktop
doc/html/: annotated.html  annotated_dup.js  calculator_8cpp.html  calculator_8cpp.js  calculator_8hpp.html  calculator_8hpp.js  calculator_8hpp_source.html  classCalculator-members.html  classCalculator.html  classCalculator.js  classUI-members.html  classUI.html  classUI.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group__Calculs.html  group__Calculs.js  index.html  index.js  main_8cpp.html  navtreedata.js  navtreeindex0.js  save__system_8cpp.html  save__system_8cpp.js  save__system_8hpp.html  save__system_8hpp.js  save__system_8hpp_source.html  terminal__ui_8cpp.html  (+5 more)
doc/html/search/: all_0.js  (+38 more)
doc/latex/: annotated.tex  calculator_8cpp.tex  calculator_8hpp.tex  calculator_8hpp_source.tex  classCalculator.tex  classUI.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group__Calculs.tex  index.tex  main_8cpp.tex  refman.tex  save__system_8cpp.tex  save__system_8hpp.tex  save__system_8hpp_source.tex  terminal__ui_8cpp.tex  terminal__ui_8hpp.tex  terminal__ui_8hpp_source.tex  topics.tex
include/: .terminal_ui.hpp.kate-swp  calculator.hpp  error.hpp  save_system.hpp  terminal_ui.hpp
src/: calculator.cpp  calculator_system.cpp  error.cpp  main.cpp  save_system.cpp  terminal_ui.cpp
